--- a/src/Pages/Education/Education.css
+++ b/src/Pages/Education/Education.css
@@ -10,8 +10,7 @@
     font-size: 80px;
     font-weight: 10%;
     margin-bottom: 30px;
-    color: hsl(210, 50%, 95%);
-    opacity: 0;
+    color: hwb(0 98% 1%);
     transform: translateY(-50px);
     transition: opacity 5s, transform 5s; /* Slow down the speed */
   }
