--- a/src/Layout.css
+++ b/src/Layout.css
@@ -89,15 +89,15 @@
   cursor: pointer; /* Change cursor to indicate hover */
 
 }
-.footer {
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   background-color: #333;
   color: white;
   text-align: center;
   padding: 20px;
-  position: fixed;
-  width: 100%;
-  bottom: 0;
+  z-index: 10; /* Ensure footer stays on top */
 }
-
-
 
